# BlizzardOracle

./: README.md
p2p_test/: Cargo.toml
p2p_test/src/: main.rs
substrate-node-template/pallets/api_interaction_ocw/: Cargo.toml  apis.txt
substrate-node-template/pallets/api_interaction_ocw/src/: lib.rs
